--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,12 +42,18 @@ body {
 
 .main-header {
     background-color: #ffe17f;
+    margin: 40px 140px 410px 140px
 }
 
-.navigation-list {
+li.navigation-item {
+    display: flex;
+    flex-direction: row;
+}
+.navigation-user {
     font-family: 'Rubik', sans-serif;
     font-size: 16px;
     line-height: 20px;
+    
 }
 
 .navigation-main {
@@ -92,6 +98,10 @@ body {
     background-size: 125px 100px;
     height: 100px;
     text-align: center;
+}
+
+.newsletter {
+    background-color: #ebebeb;
 }
 
 .footer-address {
