--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: Raleway;
+    font-family: "Raleway";
     src: url("../fonts/raleway/raleway-800.woff2") format("woff2");
     font-style: normal;
     font-weight: 800;
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-    font-family: Rubik;
+    font-family: "Rubik";
     src: url("../fonts/rubik/rubik-400.woff2") format("woff2");
     font-style: normal;
     font-weight: 400;
@@ -15,7 +15,7 @@
 }
 
 @font-face {
-    font-family: Rubik;
+    font-family: "Rubik";
     src: url("../fonts/rubik/rubik-700.woff2") format("woff2");
     font-style: normal;
     font-weight: 700;
@@ -24,7 +24,7 @@
 
 body {
     margin: 0;
-    font-family: Rubik, sans-serif;
+    font-family: "Rubik", sans-serif;
     font-size: 18px;
     line-height: 30px;
     color: #242424;
@@ -41,22 +41,23 @@ body {
 
 .main-header {
     background-color: #ffe17f;
-    margin: 40px 140px 410px 140px
+    margin: 40px 140px 0 140px
 }
 
 li.navigation-item {
     display: flex;
     flex-direction: row;
 }
+
 .navigation-user {
-    font-family: 'Rubik', sans-serif;
+    font-family: "Rubik", sans-serif;
     font-size: 16px;
     line-height: 20px;
-    
+
 }
 
 .navigation-main {
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
     font-size: 18px;
     line-height: 21px;
     letter-spacing: 0.2em;
@@ -65,13 +66,16 @@ li.navigation-item {
 
 .navigation-link,
 .product-link,
-.button  {
+.breadcrumbs-link,
+.product-card-link,
+.pagination-link,
+.button {
     color: #000000;
     text-decoration: none;
 }
 
 .section {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-size: 18px;
     line-height: 30px;
     color: #444444;
@@ -94,7 +98,7 @@ li.navigation-item {
     background-image: url("../images/delivery.png");
     background-repeat: no-repeat;
     background-position: left;
-    background-size: 125px 100px;   
+    background-size: 125px 100px;
     text-align: center;
 }
 
@@ -111,7 +115,7 @@ li.navigation-item {
 
 .services-list,
 .subscribe-button {
-    font-family: 'Raleway';
+    font-family: "Raleway";
     font-size: 18px;
     line-height: 21px;
     letter-spacing: 0.2em;
@@ -127,7 +131,8 @@ li.navigation-item {
 
 .contacts-phone {
     font-family: 'Rubik';
-    color: #ffffff;;
+    color: #ffffff;
+    ;
     font-size: 16px;
     line-height: 20px;
     text-decoration-line: underline;
@@ -170,9 +175,52 @@ li.navigation-item {
     font-size: 16px;
     line-height: 20px;
     color: #ffffff
-
 }
+
 .services-item-link {
     text-decoration: none;
     color: #f0f0f0;
+}
+
+.filter-title,
+.sort-title {
+    font-family: Raleway;
+    font-size: 16px;
+    font-weight: 800;
+    line-height: 19px;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+}
+
+.pagination-show-more {
+    font-family: 'Raleway';
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 19px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+}
+
+.select-control {
+    font-family: inherit;
+}
+
+.catalog-filter-title {
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 20px;
+    letter-spacing: -0.02em;
+}
+
+.product-card-price {
+    font-family: 'Rubik';
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: right;
 }
