--- a/5/styles/styles.css
+++ b/5/styles/styles.css
@@ -34,22 +34,20 @@ body {
     padding: 0;
 
 }
+
 .container {
     max-width: 1160px;
     width: 100%;
     margin: 0 auto;
 }
+
 .header-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     background-color: #ffe17f;
-    
+
 }
 
 .nav-wrapper-user {
     display: flex;
-    flex-direction: row;
     justify-content: space-around;
 
 }
@@ -61,7 +59,6 @@ body {
 
 .best-product-container {
     display: flex;
-    justify-content: center;
     padding-bottom: 38px;
 }
 
@@ -77,15 +74,11 @@ body {
 
 .pagination-container {
     display: flex;
-    flex-direction: row;
 }
 
 .products-container {
     display: flex;
-    flex-direction: row;
     justify-content: center;
-    max-width: 1160px;
-    width: 100%;
     margin: 0 auto;
     margin-top: 70px;
 }
@@ -96,24 +89,16 @@ body {
 
 .services-main-container {
     display: flex;
-    flex-direction: row;
     margin-top: 70px;
     justify-content: center;
+
 }
 
 .services-list-wrapper {
     display: flex;
-    max-width: 1160px;
-    width: 100%;
 
 }
-.services-list {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 35px;
-}
+
 .services-description-wrapper {
     display: flex;
     flex-direction: column;
@@ -126,53 +111,63 @@ body {
     justify-content: flex-start;
 }
 
-
 .about-container {
     display: flex;
-    max-width: 1160px;
-    width: 100%;
-    margin: 0 auto;
     justify-content: center;
     margin-top: 70px;
 }
+
 .about-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    margin-right: 131px;
-    max-width: 1160px;
-    width: 100%;
-}
-.contacts-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
     margin-right: 108px;
-    max-width: 1160px;
+    max-width: 520px;
     width: 100%;
 }
+
+.contacts-wrapper {
+    margin-right: 163px;
+    max-width: 532px;
+    width: 100%;
+}
+
 .footer-menu-wrapper {
     display: flex;
-    max-width: 1160px;
+    align-items: center;
+    justify-content: space-between;
+}
+.contacts-footer {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 234px;
     width: 100%;
-    margin: 0 auto;
-    justify-content: space-around;
 }
 
 .footer-services-list {
     display: flex;
-    justify-content: center;
+    max-width: 444px;
+    width: 100%;
+    justify-content: space-between;
 }
 
+.footer-social-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.social-rectangle {
+    visibility: hidden;
+}
 .footer-social-list {
     display: flex;
-    justify-content: center;
+    max-width: 150px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-.academy-logo {
-    display: flex;
-    justify-content: flex-end;
-}
 
 .visually-hidden {
     position: absolute;
@@ -275,9 +270,8 @@ body {
 .newsletter {
     background-color: #ebebeb;
 }
+
 .newsletter-wrapper {
-    display: flex;
-    flex-direction: column;
     margin-top: 70px;
 }
 
