--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,25 +41,65 @@ body {
     margin: 0 auto;
 }
 
+.page-header-logo {
+    margin-left: 60px;
+}
+
+.login-button {
+    margin-left: 27px;
+    padding-right: 231px;
+
+}
+
+.compare-cart-wrapper {
+    display: flex;
+    width: 190px;
+    justify-content: space-between;
+
+
+
+}
+
+.compare-link {
+    margin-right: 18px;
+}
+
 .header-wrapper {
     background-color: #ffe17f;
+    margin-top: 40px;
+    min-height: 310px;
+}
 
+.menu-wrapper {
+    display: flex;
+    width: 471px;
+    justify-content: space-between;
+    margin-left: 310px
 }
 
 .nav-wrapper-user {
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 30px;
+    align-items: center;
+    margin-left: 60px;
+    width: 1040px;
+    margin-right: 60px;
 
 }
 
-.navigation-main-container {
+.nav-main-wrapper {
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 45px;
+    margin-left: 60px;
+    margin-right: 60px;
+    width: 1040px;
 }
 
 .best-product-container {
     display: flex;
-    padding-bottom: 38px;
+
 }
 
 .slider-container {
@@ -74,13 +114,24 @@ body {
 
 .pagination-container {
     display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-top: 51px;
 }
 
-.products-container {
+.pagination-wrapper {
     display: flex;
-    justify-content: center;
-    margin: 0 auto;
+}
+
+.products-wrapper ul {
+    display: flex;
+    justify-content: space-between;
     margin-top: 70px;
+}
+
+.services-item {
+    padding: 24px 19px 24px 0;
 }
 
 .services {
@@ -90,25 +141,28 @@ body {
 .services-main-container {
     display: flex;
     margin-top: 70px;
-    justify-content: center;
+    justify-content: flex-start;
+
 
 }
 
 .services-list-wrapper {
     display: flex;
-
+    width: 280px;
+    align-items: center;
 }
 
 .services-description-wrapper {
     display: flex;
     flex-direction: column;
-    width: 448px;
+    width: 694px;
     margin-left: 116px;
     background-image: url("../images/delivery-man.png");
     background-repeat: no-repeat;
     background-position-x: right;
     background-position-y: top;
-    justify-content: flex-start;
+    justify-content: space-between;
+
 }
 
 .about-container {
@@ -118,9 +172,6 @@ body {
 }
 
 .about-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
     margin-right: 108px;
     max-width: 520px;
     width: 100%;
@@ -132,11 +183,27 @@ body {
     width: 100%;
 }
 
+.about-delivery-description-list {
+    padding-left: 18px
+}
+
+.about-delivery-description-item {
+    padding-top: 19px;
+    padding-bottom: 19px;
+}
+
+.contacts-description {
+    width: 496px;
+    min-height: 60px;
+    text-align: left;
+}
+
 .footer-menu-wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 .contacts-footer {
     display: flex;
     flex-wrap: wrap;
@@ -149,17 +216,20 @@ body {
     max-width: 444px;
     width: 100%;
     justify-content: space-between;
+    list-style: none;
 }
 
 .footer-social-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+
 }
+
 .social-rectangle {
     visibility: hidden;
 }
+
 .footer-social-list {
     display: flex;
     max-width: 150px;
@@ -168,6 +238,10 @@ body {
     padding: 0;
 }
 
+.footer-social-item {
+    padding-left: 15px;
+    padding-right: 15px;
+}
 
 .visually-hidden {
     position: absolute;
@@ -186,6 +260,8 @@ body {
     font-family: inherit;
     font-size: 16px;
     line-height: 20px;
+    padding: 10px 208px 10px 48px;
+    width: 103px;
 }
 
 .subscribe-field {
@@ -203,6 +279,7 @@ body {
     font-size: 16px;
     line-height: 20px;
     text-align: center;
+    padding: 10px 56px;
 }
 
 
@@ -214,6 +291,7 @@ body {
     height: 40px;
     margin: 0;
     padding: 0;
+    list-style: none;
 }
 
 .navigation-main {
@@ -222,6 +300,15 @@ body {
     line-height: 21px;
     letter-spacing: 0.2em;
     text-transform: uppercase;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.slider-pagination {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .navigation-link,
@@ -265,6 +352,9 @@ body {
     letter-spacing: 0.2em;
     text-transform: uppercase;
     margin-top: 70px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+
 }
 
 .newsletter {
@@ -273,6 +363,18 @@ body {
 
 .newsletter-wrapper {
     margin-top: 70px;
+}
+
+.newsletter-description-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.subscribe-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 56px;
 }
 
 .footer-address {
@@ -292,6 +394,7 @@ body {
     text-transform: uppercase;
     margin: 0;
     padding: 0;
+    list-style: none;
 
 }
 
@@ -344,7 +447,7 @@ body {
     font-family: 'Raleway';
     font-size: 18px;
     line-height: 21px;
-    text-align: center;
+    text-align: left;
     letter-spacing: 0.2em;
     text-transform: uppercase;
 }
@@ -354,6 +457,11 @@ body {
     font-size: 18px;
     line-height: 30px;
     color: #000000;
+}
+
+.contacts-main {
+    padding-top: 15px;
+    width: 550px;
 }
 
 .contacts-footer {
@@ -423,7 +531,16 @@ h2 {
     line-height: 50px;
 }
 
-.spec-list b {
+ul.spec-list {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-top: 49px;
+}
+
+.spec-range,
+.spec-radius {
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 400;
@@ -431,12 +548,25 @@ h2 {
     line-height: 30px;
 }
 
-.spec-list {
+.range-name,
+.radius-name {
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 30px;
+}
+
+li.spec-item-range {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+li.spec-item-radius {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
 }
 
 li.product-item {
@@ -446,6 +576,9 @@ li.product-item {
     font-size: 18px;
     line-height: 24px;
     letter-spacing: -0.02em;
+    display: flex;
+    flex-wrap: wrap;
+    width: 160px;
 }
 
 .pagination-item {
@@ -498,6 +631,22 @@ li.product-item {
     color: #000000;
 }
 
+.contact-us {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #000000;
+    display: block;
+    margin-top: 40px;
+    text-align: start;
+}
+
 .about-delivery-description-item {
     font-family: 'Rubik';
     font-style: normal;
@@ -508,11 +657,13 @@ li.product-item {
 }
 
 .contacts-subtitle {
+    display: block;
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
     line-height: 30px;
+    margin-top: 30px;
 }
 
 .pagination-text {
@@ -528,4 +679,30 @@ li.product-item {
 .products-list {
     margin: 0;
     padding: 0;
+    list-style: none;
+}
+
+.product-name {
+    display: block;
+    margin: 0;
+    padding: 0;
+}
+
+.contacts-schedule {
+    list-style: none;
+    padding: 0;
+}
+
+.description-content {
+    margin: 0;
+}
+
+.advantage-description {
+    display: block;
+    margin-top: 29px;
+    margin-bottom: 0;
+}
+
+.advantage-title {
+    margin-bottom: 0;
 }
