--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,7 +32,6 @@ body {
     line-height: 30px;
     margin: 0;
     padding: 0;
-
 }
 
 .container {
@@ -46,14 +45,17 @@ body {
 }
 
 .login-button {
-    margin-left: 27px;
-    padding-right: 231px;
-
+    margin-left: 37px;
 }
 
-.compare-cart-wrapper {
+.compare-cart {
+    width: 180px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-left: 170px;
     display: flex;
-    width: 190px;
+    width: 240px;
     justify-content: space-between;
 }
 
@@ -84,13 +86,19 @@ body {
     flex-wrap: wrap;
     margin-top: 30px;
     align-items: center;
+    justify-content: space-between;
+}
 
+.catalog-button {
+    width: 50px;
+    margin-left: 7px;
 }
 
 .nav-main-wrapper {
     display: flex;
     flex-wrap: wrap;
     margin-top: 45px;
+    justify-content: space-between;
 }
 
 .best-product-container {
@@ -112,6 +120,8 @@ body {
     flex-direction: column;
     justify-content: flex-end;
     padding-top: 10px;
+    max-width: 560px;
+    width: 100%;
 }
 
 .pagination-container {
@@ -125,28 +135,23 @@ body {
 .pagination-wrapper {
     display: flex;
 }
-
 .products-wrapper ul {
     display: flex;
     justify-content: space-between;
     margin-top: 70px;
 }
-
 .services-item {
     padding-bottom: 45px;
 }
-
 .services {
     background-color: #f0f0f0;
     margin-top: 150px;
     min-height: 289px;
 }
-
 .services-main-container {
     display: flex;
     justify-content: flex-start;
 }
-
 .services-list-wrapper {
     display: flex;
     width: 280px;
@@ -163,7 +168,6 @@ body {
     background-repeat: no-repeat;
     background-position-x: right;
     background-position-y: top;
-    justify-content: space-between;
     margin-top: -30px;
 
 }
@@ -180,24 +184,76 @@ body {
     width: 100%;
 }
 
+.about-title {
+    margin: 0;
+    margin-top: 40px;
+}
+
+.about-description {
+    margin: 0;
+    margin-top: 48px;
+    color: #444444;
+}
+
+.about-delivery-description {
+    margin: 0;
+    margin-top: 30px;
+    color: #444444;
+}
+
+.about-delivery-description-list {
+    margin: 0;
+    margin-top: 30px;
+    padding: 0;
+    margin-left: 15px;
+}
+
+.about-delivery-description-item {
+    padding-bottom: 19px;
+    padding-left: 26px;
+}
+
+.contacts-title {
+    margin: 0;
+    margin-top: 47px;
+}
+
+.contacts-subtitle {
+    display: block;
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+    margin-top: 30px;
+}
+
 .contacts-wrapper {
     max-width: 532px;
     width: 100%;
 }
 
-.about-delivery-description-list {
-    padding-left: 18px
-}
-
-.about-delivery-description-item {
-    padding-top: 19px;
-    padding-bottom: 19px;
-}
-
 .contacts-description {
-    width: 496px;
-    min-height: 60px;
-    text-align: left;
+    margin: 0;
+    margin-top: 40px;
+    color: #444444;
+}
+
+.contacts-main {
+    font-family: 'Rubik';
+    font-size: 18px;
+    line-height: 30px;
+    color: #444444;
+    margin-top: 15px;
+    font-style: normal;
+}
+
+.contacts-schedule {
+    list-style: none;
+    margin: 0;
+    margin-top: 15px;
+    padding: 0;
+    color: #444444;
 }
 
 .site-logo {
@@ -297,14 +353,36 @@ body {
     font-family: "Rubik", sans-serif;
     font-size: 18px;
     line-height: 30px;
-    width: 1040px;
-    height: 40px;
     margin: 0;
     padding: 0;
     list-style: none;
+    display: flex;
+    min-height: 40px;
+    height: 100%;
+    align-items: center;
+    max-width: 625px;
+    width: 100%;
 }
 
-.navigation-main {
+
+.nav-menu {
+    display: flex;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    list-style: none;
+    margin: 0;
+    margin-left: 276px;
+    padding: 0;
+    color: #000000;
+    text-decoration: none;
+    width: 471px;
+    justify-content: space-between;
+}
+
+.nav-catalog-link {
     font-family: "Raleway", sans-serif;
     font-size: 18px;
     line-height: 21px;
@@ -313,20 +391,30 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
+    color: #000000;
+    text-decoration: none;
 }
 
 .slider-pagination {
+    display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
+    width: 76px;
+    justify-content: space-around;
 }
 
-.navigation-link,
+
 .product-link,
 .breadcrumbs-link,
 .product-card-link,
 .pagination-link,
 .button {
+    color: #000000;
+    text-decoration: none;
+}
+
+.navigation-link {
     color: #000000;
     text-decoration: none;
 }
@@ -374,6 +462,7 @@ body {
 .newsletter {
     background-color: #ebebeb;
     min-height: 421px;
+    margin-top: 70px;
 }
 
 .newsletter-title {
@@ -384,13 +473,12 @@ body {
 .newsletter-description {
     margin: 0;
     margin-top: 74px;
+    color: #444444;
 }
-
 .newsletter-description-wrapper {
     display: flex;
     align-items: center;
 }
-
 .subscribe-wrapper {
     display: flex;
     align-items: center;
@@ -432,12 +520,10 @@ body {
     background-color: #444444;
     height: 321px;
 }
-
 .footer-services li {
     color: #ffffff;
 
 }
-
 .contacts-phone {
     font-family: 'Rubik';
     color: #000000;
@@ -457,12 +543,10 @@ body {
 .contacts-address-text {
     margin: 0;
 }
-
 .catalog-products {
     background-color: #f0f0f0;
     margin-top: 35px;
 }
-
 .catalog-wrapper {
     display: flex;
 
@@ -488,7 +572,6 @@ body {
     font-size: 16px;
     line-height: 19px;
 }
-
 .product-card-title {
     font-family: 'Rubik';
     font-weight: 700;
@@ -496,7 +579,6 @@ body {
     line-height: 20px;
     letter-spacing: -0.02em;
 }
-
 .button-more {
     font-family: 'Raleway';
     font-size: 18px;
@@ -506,17 +588,6 @@ body {
     text-transform: uppercase;
 }
 
-.contacts-main {
-    font-family: 'Rubik';
-    font-size: 18px;
-    line-height: 30px;
-    color: #000000;
-}
-
-.contacts-main {
-    padding-top: 15px;
-    width: 550px;
-}
 
 .contacts-footer {
     font-family: 'Rubik';
@@ -529,7 +600,6 @@ body {
     text-decoration: none;
     color: #f0f0f0;
 }
-
 .filter-title,
 .sort-title {
     font-family: "Raleway";
@@ -554,7 +624,6 @@ body {
     letter-spacing: 0.2em;
     text-transform: uppercase;
 }
-
 .select-control {
     font-family: 'Rubik';
     font-style: normal;
@@ -562,7 +631,6 @@ body {
     font-size: 18px;
     line-height: 30px;
 }
-
 .catalog-filter-title {
     font-family: 'Rubik';
     font-style: normal;
@@ -579,7 +647,6 @@ body {
     line-height: 21px;
     text-align: right;
 }
-
 h2 {
     font-family: 'Raleway';
     font-style: normal;
@@ -587,7 +654,6 @@ h2 {
     font-size: 50px;
     line-height: 50px;
 }
-
 ul.spec-list {
     display: flex;
     list-style: none;
@@ -604,15 +670,24 @@ ul.spec-list {
     font-size: 36px;
     line-height: 30px;
 }
+.range-name {
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    margin-top: 12px;
+}
 
-.range-name,
 .radius-name {
     font-family: 'Rubik';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 30px;
+    margin-top: 12px;
 }
+
 
 li.spec-item-range {
     display: flex;
@@ -626,6 +701,7 @@ li.spec-item-radius {
     margin-left: 20px;
 }
 
+
 li.product-item {
     font-family: 'Raleway';
     font-style: normal;
@@ -637,7 +713,6 @@ li.product-item {
     flex-wrap: wrap;
     width: 160px;
 }
-
 .pagination-item {
     font-family: 'Rubik';
     font-style: normal;
@@ -648,7 +723,6 @@ li.product-item {
     color: #444444;
     opacity: 0.3;
 }
-
 .contacts-phone {
     font-family: 'Rubik';
     font-style: normal;
@@ -657,7 +731,6 @@ li.product-item {
     line-height: 20px;
     text-decoration-line: underline;
 }
-
 .footer-services-list {
     font-family: 'Raleway';
     font-style: normal;
@@ -669,10 +742,7 @@ li.product-item {
     margin: 0;
     padding: 0;
 }
-
-.button-more,
-.more-about,
-.contact-us {
+.button-more {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 800;
@@ -684,7 +754,21 @@ li.product-item {
     text-decoration: none;
     color: #000000;
 }
-
+.more-about {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #000000;
+    display: block;
+    margin-top: 40px;
+    text-align: left;
+}
 .button-delivery {
     font-family: 'Raleway';
     font-style: normal;
@@ -699,7 +783,6 @@ li.product-item {
     background-color: #000000;
     padding: 9px 120px 11px 20px;
 }
-
 .button-warranty {
     font-family: 'Raleway';
     font-style: normal;
@@ -713,7 +796,6 @@ li.product-item {
     color: #000000;
     padding: 6px 20px;
 }
-
 .button-credit {
     font-family: 'Raleway';
     font-style: normal;
@@ -727,7 +809,6 @@ li.product-item {
     color: #000000;
     padding: 6px 35px;
 }
-
 .contact-us {
     font-family: 'Raleway';
     font-style: normal;
@@ -743,7 +824,6 @@ li.product-item {
     margin-top: 40px;
     text-align: start;
 }
-
 .about-delivery-description-item {
     font-family: 'Rubik';
     font-style: normal;
@@ -752,15 +832,8 @@ li.product-item {
     line-height: 20px;
     letter-spacing: -0.02em;
 }
-
-.contacts-subtitle {
-    display: block;
-    font-family: 'Rubik';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 30px;
-    margin-top: 30px;
+.about-delivery-description-item:nth-child(3) {
+    padding-bottom: 0;
 }
 
 .pagination-text {
@@ -772,13 +845,11 @@ li.product-item {
     letter-spacing: 0.2em;
     text-transform: uppercase;
 }
-
 .products-list {
     margin: 0;
     padding: 0;
     list-style: none;
 }
-
 .pagination {
     margin: 0;
     margin-top: 25px;
@@ -791,24 +862,21 @@ li.product-item {
 .product-name {
     display: block;
     margin: 0;
+    margin-top: 32px;
     padding: 0;
 }
-
-.contacts-schedule {
-    list-style: none;
-    padding: 0;
-}
-
 .description-content {
     margin: 0;
+    margin-top: 34px;
+    color: #444444;
 }
 
 .advantage-description {
     display: block;
     margin-top: 29px;
     margin-bottom: 0;
+    color: #444444;
 }
-
 .advantage-title {
     margin: 0;
 }
@@ -821,7 +889,6 @@ li.product-item {
     font-size: 50px;
     line-height: 50px;
 }
-
 .breadcrumbs {
     display: flex;
     margin: 0;
@@ -831,17 +898,14 @@ li.product-item {
     justify-content: space-between;
     padding: 0;
 }
-
 .inner-header {
     margin-top: 35px;
     margin-left: 105px;
 }
-
 .select-control {
     border: none;
     background-color: #f0f0f0;
 }
-
 .slider-button {
     height: 60px;
     width: 20px;
